Добавил новый функционал

--- a/Presentation/API/appsettings.Development.json
+++ b/Presentation/API/appsettings.Development.json
@@ -8,10 +8,9 @@
   "Authentication": {
     "JwtBearer": {
       "Audience": "front-end",
-      "Authority": "https://localhost:7252",
-      "SecurityKey": "r38s3aio1a2.1ags2bm4GhrF9",
+      "SecurityKey": "r38s3aio1a21ags2bm4GhrF9",
       "Issuer": "https://localhost:7252",
-      "Lifetime": "7200000"
+      "Lifetime": "3600000"
     }
   },
   "ConnectionStrings": {
