--- a/Presentation/API/appsettings.Development.json
+++ b/Presentation/API/appsettings.Development.json
@@ -14,6 +14,7 @@
     }
   },
   "ConnectionStrings": {
-    "Postgresql": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=jhtnmb32;"
+    "Postgresql": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=jhtnmb32;",
+    "PostgresqlUbuntu": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=1f6b725bae2291!;"
   }
 }
